--- a/index.html
+++ b/index.html
@@ -548,7 +548,17 @@
             }
             .hero-stat-item {
                 flex: 1 1 0;
+                flex-direction: column;
+                align-items: center;
                 justify-content: center;
+                text-align: center;
+                gap: 6px;
+            }
+            .hero-stat-number {
+                font-size: 1.2rem;
+            }
+            .hero-stat-label {
+                font-size: 0.85rem;
             }
         }
 
