--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
         .logo img {
             height: 55px;
             transition: var(--transition);
+            border-radius: 50%;
+            object-fit: cover;
         }
         .scrolled .logo img {
             height: 45px;
@@ -888,8 +890,9 @@
             color: #666;
             line-height: 1.7;
         }
-        /* عرض أرقام الهاتف بالاتجاه الصحيح داخل اللغة العربية */
-        .contact-details a {
+        /* كلاس عام لعرض أرقام الهاتف بالاتجاه الصحيح داخل اللغة العربية */
+        .phone-number,
+        a[href^="tel:"] {
             direction: ltr;
             unicode-bidi: bidi-override;
             display: inline-block;
@@ -949,6 +952,9 @@
         }
         .footer-logo { 
             height: 55px; 
+            width: 55px;
+            border-radius: 50%;
+            object-fit: cover;
             filter: brightness(0) invert(1); 
             margin-bottom: 20px; 
         }
@@ -1365,7 +1371,7 @@
     <div class="top-bar">
         <div class="container">
             <div class="contact-links">
-                <a href="tel:+966506534579" title="اتصل بنا">
+                <a href="tel:+966506534579" title="اتصل بنا" class="phone-number">
                     <span>📞</span>
                     <span>+966 50 653 4579</span>
                 </a>
@@ -1487,7 +1493,7 @@
             <div class="tab-contact-tile">
                 <span>
                     <span>📞</span>
-                    <a href="tel:+966506534579" x-text="language === 'ar' ? '+966 50 653 4579' : '+966 50 653 4579'"></a>
+                    <a href="tel:+966506534579" class="phone-number" x-text="language === 'ar' ? '+966 50 653 4579' : '+966 50 653 4579'"></a>
                 </span>
                 <span>
                     <span>✉️</span>
@@ -1858,7 +1864,7 @@
                         <div class="contact-icon-box">📞</div>
                         <div class="contact-details">
                             <h4 x-text="language === 'ar' ? 'الهاتف / واتساب' : 'Phone / WhatsApp'"></h4>
-                            <a href="tel:+966506534579">+966 50 653 4579</a>
+                            <a href="tel:+966506534579" class="phone-number">+966 50 653 4579</a>
                         </div>
                     </div>
                     
@@ -1952,7 +1958,7 @@
                     <ul>
                         <li x-text="language === 'ar' ? '📍 جدة، السعودية' : '📍 Jeddah, Saudi Arabia'"></li>
                         <li x-text="language === 'ar' ? '📍 القاهرة، مصر' : '📍 Cairo, Egypt'"></li>
-                        <li><a href="tel:+966506534579">📞 +966 50 653 4579</a></li>
+                        <li><a href="tel:+966506534579" class="phone-number">📞 +966 50 653 4579</a></li>
                         <li><a href="mailto:ArtrovaStudio@gmail.com">✉️ ArtrovaStudio@gmail.com</a></li>
                     </ul>
                 </div>
