Update footer logo style and caravans service text

--- a/index.html
+++ b/index.html
@@ -955,7 +955,6 @@
             width: 55px;
             border-radius: 50%;
             object-fit: cover;
-            filter: brightness(0) invert(1); 
             margin-bottom: 20px; 
         }
         .footer-col h4 { 
@@ -1949,7 +1948,7 @@
                         <li x-text="language === 'ar' ? 'تصميم تجاري' : 'Commercial Design'"></li>
                         <li x-text="language === 'ar' ? 'تصميم الضيافة' : 'Hospitality Design'"></li>
                         <li x-text="language === 'ar' ? 'أثاث مخصص' : 'Custom Furniture'"></li>
-                        <li x-text="language === 'ar' ? 'وحدات جاهزة (كرفانات)' : 'Modular Units (Caravans)'"></li>
+                        <li x-text="language === 'ar' ? 'كرفانات' : 'Caravans'"></li>
                     </ul>
                 </div>
 
